# bevy_nodemap

./: .gitignore  Cargo.toml  LICENSE.md  README.md  shell.nix
examples/: example.rs
src/: blob_utils.rs  cut_stuff.rs  data.rs  disc_blob.rs  graph_gen.rs  lib.rs  main copy 2.rs  main copy.rs  main.rs  node_utils.rs  presets.rs  sparse_nodes.rs  sphere_blob.rs  sphere_surface_blob  sphere_surface_blob.rs
src/blobs/: disc_blob.rs  mod.rs  sphere_blob.rs  sphere_surface_blob.rs
src/data/: blob_trait.rs  edge_data.rs  generic_node.rs  global_state.rs  graph_state.rs  mod.rs  node_data.rs  node_data_trait.rs  types.rs  universe.rs
