[package]
name = "bevy_nodemap"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "=0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy_egui = "0.27.0"
bevy_flycam = "0.13.0"
bevy_mod_billboard = "0.6.0"
egui = "0.27.2"
petgraph = "0.6.5"
rand = "0.8.5"
