[package]
name = "bevy_nodemap"
version = "1.0.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_flycam = "0.15.0"
bevy-inspector-egui = "0.28.0"
bevy_egui = "0.31.1"
petgraph = "0.6.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
simple-easing = "1.0.1"
bevy_mod_billboard = "0.7.0"

[profile.release]
debug = true
